--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <!-- Single, optimized viewport meta tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="icon" type="image/webp" href="/images/sqfgo.webp" />
+    <link rel="icon" type="image/webp" href="/images/sqfgo.webp">
     <title>The Birccster Webby</title>
   </head>
   <body>
